--- a/src/RhythmUI/RhythmUI.csproj
+++ b/src/RhythmUI/RhythmUI.csproj
@@ -6,8 +6,8 @@
     <UseWPF>true</UseWPF>
     <PlatformTarget>x64</PlatformTarget>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <Configurations>Debug R23.1;Debug R24;Debug R24.1;Debug R20;Debug R21;Debug R22;Debug R23;</Configurations>
-    <Configurations>$(Configurations);Release R24.1;Release R24;Release R23.1;Release R20;Release R21;Release R22;Release R23;</Configurations>
+    <Configurations>Debug R24;Debug R20;Debug R21;Debug R22;Debug R23;</Configurations>
+    <Configurations>$(Configurations);Release R24;Release R20;Release R21;Release R22;Release R23;</Configurations>
     <NoWarn>MSB3277</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.Contains('Debug R20'))">
@@ -53,52 +53,26 @@
     <DefineConstants>$(DefineConstants);R22</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.Contains('Debug R23'))">
-    <DynamoVersion>2.13</DynamoVersion>
-    <DynamoOutput>2.13</DynamoOutput>
+    <DynamoVersion>2.16</DynamoVersion>
+    <DynamoOutput>2.16</DynamoOutput>
     <RevitVersion>2023</RevitVersion>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineConstants>$(DefineConstants);R23</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.Contains('Release R23'))">
-    <DynamoVersion>2.13</DynamoVersion>
-    <DynamoOutput>2.13</DynamoOutput>
-    <RevitVersion>2023</RevitVersion>
-    <DefineConstants>$(DefineConstants);R23</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="$(Configuration.Contains('Debug R23.1'))">
-    <DynamoVersion>2.16</DynamoVersion>
-    <DynamoOutput>2.16</DynamoOutput>
-    <RevitVersion>2023</RevitVersion>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <DefineConstants>$(DefineConstants);R23</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="$(Configuration.Contains('Release R23.1'))">
     <DynamoVersion>2.16</DynamoVersion>
     <DynamoOutput>2.16</DynamoOutput>
     <RevitVersion>2023</RevitVersion>
     <DefineConstants>$(DefineConstants);R23</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.Contains('Debug R24'))">
-    <DynamoVersion>2.17</DynamoVersion>
-    <DynamoOutput>2.17</DynamoOutput>
-    <RevitVersion>2024</RevitVersion>
-    <DefineConstants>$(DefineConstants);R24</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="$(Configuration.Contains('Release R24'))">
-    <DynamoVersion>2.17</DynamoVersion>
-    <DynamoOutput>2.17</DynamoOutput>
-    <RevitVersion>2024</RevitVersion>
-    <DefineConstants>$(DefineConstants);R24</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="$(Configuration.Contains('Debug R24.1'))">
     <DynamoVersion>2.18</DynamoVersion>
     <DynamoOutput>2.18</DynamoOutput>
     <RevitVersion>2024.1</RevitVersion>
     <DefineConstants>$(DefineConstants);R24</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="$(Configuration.Contains('Release R24.1'))">
+  <PropertyGroup Condition="$(Configuration.Contains('Release R24'))">
     <DynamoVersion>2.18</DynamoVersion>
     <DynamoOutput>2.18</DynamoOutput>
     <RevitVersion>2024.1</RevitVersion>
@@ -122,10 +96,7 @@
     <PackageReference Include="DynamoVisualProgramming.WpfUILibrary" Version="$(DynVersion).*" />
     <PackageReference Include="Chuongmep.Revit.Api.RevitAPI" Version="$(RevitVersion).*"/>
     <PackageReference Include="Chuongmep.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*"/>
-    <PackageReference Include="DynamoVisualProgramming.Core" Version="$(DynVersion).*"/>
     <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DynVersion).*"/>
-    <PackageReference Include="DynamoVisualProgramming.Revit" Version="$(DynVersion).*"/>
-
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NUnit" Version="2.6.3" />
