--- a/src/RhythmViewExtension/RhythmViewExtension.csproj
+++ b/src/RhythmViewExtension/RhythmViewExtension.csproj
@@ -15,20 +15,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommonServiceLocator" Version="1.0" />
-    <PackageReference Include="DynamoVisualProgramming.Core" Version="2.17.3.4871" />
-    <PackageReference Include="DynamoVisualProgramming.DynamoServices" Version="2.17.3.4871" />
     <PackageReference Include="DynamoVisualProgramming.WpfUILibrary" Version="2.17.3.4871" />
-    <PackageReference Include="DynamoVisualProgramming.ZeroTouchLibrary" Version="2.17.3.4871" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="NUnit" Version="2.6.3" />
-    <PackageReference Include="Prism" Version="4.1.0.0" />
-    <PackageReference Include="System.Buffers" Version="4.5.1" />
-    <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
-    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
-    <PackageReference Include="System.Memory" Version="4.5.4" />
-    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RhythmCore\RhythmCore.csproj" />
   </ItemGroup>
   <Target Name="CopyFiles" AfterTargets="CoreBuild" Condition="$(Configuration.Contains('Release'))">
     <ItemGroup>
