--- a/.github/workflows/Workflow.yml
+++ b/.github/workflows/Workflow.yml
@@ -15,5 +15,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+      - name : Change Directory
+        run: cd src
       - name: Run Nuke Build
-        run: ./src/build.cmd --GitHubToken ${{ secrets.GITHUB_TOKEN }}
+        run: ./build.cmd --GitHubToken ${{ secrets.GITHUB_TOKEN }}
