--- a/src/RhythmRevit/RhythmRevit.2021/RhythmRevit.2021.csproj
+++ b/src/RhythmRevit/RhythmRevit.2021/RhythmRevit.2021.csproj
@@ -69,6 +69,9 @@
     <Reference Include="DSIronPython, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DSIronPython.dll</HintPath>
     </Reference>
+    <Reference Include="DSRevitNodesUI, Version=2.6.2.18430, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.6.2.18430\lib\DSRevitNodesUI.dll</HintPath>
+    </Reference>
     <Reference Include="DynamoApplications, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoApplications.dll</HintPath>
     </Reference>
@@ -77,6 +80,9 @@
     </Reference>
     <Reference Include="DynamoInstallDetective, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamoVisualProgramming.Core.2.6.2.15694\lib\net47\DynamoInstallDetective.dll</HintPath>
+    </Reference>
+    <Reference Include="DynamoRevitDS, Version=2.6.2.18430, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.6.2.18430\lib\DynamoRevitDS.dll</HintPath>
     </Reference>
     <Reference Include="DynamoServices, Version=2.6.2.15694, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamoVisualProgramming.DynamoServices.2.6.2.15694\lib\net47\DynamoServices.dll</HintPath>
@@ -130,11 +136,11 @@
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
-    <Reference Include="RevitNodes, Version=2.6.1.8850, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.6.1.8850\lib\RevitNodes.dll</HintPath>
+    <Reference Include="RevitNodes, Version=2.6.2.18430, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.6.2.18430\lib\RevitNodes.dll</HintPath>
     </Reference>
-    <Reference Include="RevitServices, Version=2.6.1.8850, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.6.1.8850\lib\RevitServices.dll</HintPath>
+    <Reference Include="RevitServices, Version=2.6.2.18430, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.6.2.18430\lib\RevitServices.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -169,6 +175,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
