--- a/src/RhythmRevit/RhythmRevit.2023/RhythmRevit.2023.csproj
+++ b/src/RhythmRevit/RhythmRevit.2023/RhythmRevit.2023.csproj
@@ -69,6 +69,9 @@
     <Reference Include="DSCPython, Version=2.16.2.5624, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamoVisualProgramming.Core.2.16.2.5624\lib\net48\DSCPython.dll</HintPath>
     </Reference>
+    <Reference Include="DSRevitNodesUI, Version=2.16.1.6510, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.16.1.6511\lib\DSRevitNodesUI.dll</HintPath>
+    </Reference>
     <Reference Include="DynamoApplications, Version=2.16.2.5624, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamoVisualProgramming.Core.2.16.2.5624\lib\net48\DynamoApplications.dll</HintPath>
     </Reference>
@@ -79,7 +82,7 @@
       <HintPath>..\packages\DynamoVisualProgramming.Core.2.16.2.5624\lib\net48\DynamoInstallDetective.dll</HintPath>
     </Reference>
     <Reference Include="DynamoRevitDS, Version=2.16.1.6510, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.16.1.6510\lib\DynamoRevitDS.dll</HintPath>
+      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.16.1.6511\lib\DynamoRevitDS.dll</HintPath>
     </Reference>
     <Reference Include="DynamoServices, Version=2.16.2.5624, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamoVisualProgramming.DynamoServices.2.16.2.5624\lib\netstandard2.0\DynamoServices.dll</HintPath>
@@ -134,10 +137,10 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitNodes, Version=2.16.1.6510, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.16.1.6510\lib\RevitNodes.dll</HintPath>
+      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.16.1.6511\lib\RevitNodes.dll</HintPath>
     </Reference>
     <Reference Include="RevitServices, Version=2.16.1.6510, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.16.1.6510\lib\RevitServices.dll</HintPath>
+      <HintPath>..\packages\DynamoVisualProgramming.Revit.2.16.1.6511\lib\RevitServices.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -172,6 +175,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
