--- a/src/RhythmExtension/RhythmExtension.csproj
+++ b/src/RhythmExtension/RhythmExtension.csproj
@@ -56,101 +56,98 @@
       <HintPath>..\packages\DynamoVisualProgramming.WpfUILibrary.2.18.1.5096\lib\net48\CoreNodeModelsWpf.dll</HintPath>
     </Reference>
     <Reference Include="DesignScriptBuiltin, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DesignScriptBuiltin.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DesignScriptBuiltin.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DSCPython, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DSCPython.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DSCPython.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DynamoApplications, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoApplications.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoApplications.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DynamoCore, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoCore.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoCore.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DynamoCoreWpf, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\DynamoVisualProgramming.WpfUILibrary.2.18.1.5096\lib\net48\DynamoCoreWpf.dll</HintPath>
     </Reference>
     <Reference Include="DynamoInstallDetective, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoInstallDetective.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoInstallDetective.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DynamoServices, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.DynamoServices.2.18.1.5096\lib\netstandard2.0\DynamoServices.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.DynamoServices.2.18.1.5096\lib\netstandard2.0\DynamoServices.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DynamoShapeManager, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoShapeManager.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoShapeManager.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DynamoUnits, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.18.1.5096\lib\net48\DynamoUnits.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.ZeroTouchLibrary.2.18.1.5096\lib\net48\DynamoUnits.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="DynamoUtilities, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoUtilities.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\DynamoUtilities.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Expression.Interactions.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\Prism.4.1.0.0\lib\NET40\Microsoft.Expression.Interactions.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Prism, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Prism.Interactivity, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.Interactivity.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.Interactivity.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="ProtoCore, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\ProtoCore.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\ProtoCore.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="ProtoGeometry, Version=2.18.0.1365, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.18.1.5096\lib\net48\ProtoGeometry.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.ZeroTouchLibrary.2.18.1.5096\lib\net48\ProtoGeometry.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
-    <Reference Include="System.Collections.Immutable, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Collections.Immutable.7.0.0\lib\net462\System.Collections.Immutable.dll</HintPath>
+    <Reference Include="System.Collections.Immutable, Version=1.2.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Collections.Immutable.1.7.1\lib\net461\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
-    <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
     </Reference>
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
     </Reference>
-    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.4.1.0.0\lib\NET40\System.Windows.Interactivity.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\Prism.4.1.0.0\lib\NET40\System.Windows.Interactivity.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -160,21 +157,41 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="VMDataBridge, Version=2.18.1.5096, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\VMDataBridge.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>packages\DynamoVisualProgramming.Core.2.18.1.5096\lib\net48\VMDataBridge.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Global.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RhythmExtension.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <Import Project="..\RhythmExtension.SharedProject\RhythmExtension.SharedProject.projitems" Label="Shared" />
+  <ItemGroup>
+    <EmbeddedResource Include="Revit\21\RhythmRevit.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Revit\20\RhythmRevit.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Revit\22\RhythmRevit.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Revit\23\RhythmRevit.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Revit\24\RhythmRevit.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="images\logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\x64\Release\RhythmExtension.dll" "$(ProjectDir)..\..\..\deploy\2024\" /Y /I
+    <PostBuildEvent>if $(ConfigurationName) == Release xcopy "$(ProjectDir)bin\x64\Release\RhythmExtension.dll" "$(ProjectDir)..\..\deploy\" /Y /I
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
